--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Meu site favorito!</title>
+    <link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
     <header>
-        <img src="img/Zhongli.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
+        <img src="img/morax.png" title="É título da imagem" alt="Não carregou imagem..." width="300" >
         <h1>Página index.html</h1>
         <h2>Elemento Geo</h2>
         <img src="img/Element_Geo.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
@@ -106,6 +107,16 @@
             <h4>Times que podem ser formados para esse personagem</h4>     
             
             <style>
+                body {
+                     background-image: url("img/rex lapis.png");
+    background-repeat:repeat ;
+    background-position: right top;
+    background-attachment: fixed;
+    background-blend-mode: multiply;
+    background-size: cover;
+    background-color: #cfa344;
+}
+                }
 
                 table, th, tr, td {
                     border: 1px solid black
@@ -169,6 +180,11 @@
             </table>
             <h5>Habilidades</h5>
             <p>Ataque Normal: Chuva de pedra</p>
+            <td><img src="img/chuva de pedra.png" title="É título da imagem" alt="Não carregou imagem..." width="80" ></td>
+            <p>Habilidade Elemental: Dominus Lapidis</p>
+            <td><img src="img/dominio lapidus.png" title="É título da imagem" alt="Não carregou imagem..." width="80" ></td>
+            <p>Supremo: Chuva Estelar</p>
+            <td><img src="img/chuva estelar.png" title="É título da imagem" alt="Não carregou imagem..." width="80" ></td>
             
        </article>
     </section>
