--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <img src="img/Element_Geo.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
     </header>
     <nav>
-        <a href="index.html">Index</a> | 
-        <a href="pagina1.html">Página 1</a>    |  
+        <a href="zhongli.html">Index</a> | 
+        <a href="alhaitham.html">Página 1</a>    |  
     </nav>
     <main>
     <hr>
@@ -116,7 +116,7 @@
     background-size: cover;
     background-color: #cfa344;
 }
-                }
+                
 
                 table, th, tr, td {
                     border: 1px solid black
