--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Meu site favorito!</title>
+    <title>zhongli</title>
     <link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
     <header>
         <img src="img/morax.png" title="É título da imagem" alt="Não carregou imagem..." width="300" >
-        <h1>Página index.html</h1>
+        <h1>zhongli.html</h1>
         <h2>Elemento Geo</h2>
         <img src="img/Element_Geo.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
     </header>
@@ -85,6 +85,16 @@
                 "Você já terminou seus deveres, vá para casa."
                 Ele permaneceu no meio da multidão.
                 "Será que eu terminei meus deveres?"</p>
+                <h7 class="segundo">Visão</h7>
+                <p>Depois que o Rito de Despedida acabou, em que Zhongli era tanto o diretor como a estrela, a Mensageira Fatui chamada Signora apareceu perante ele.
+                    Devido a um contrato anterior, ela estava aqui para reivindicar a Gnosis do Arconte Geo.
+                    Na frente do/a Viajante e dos Mensageiros Fatui, Zhongli falou a verdade de que tinha estabelecido um contrato com a Arconte Cryo.
+                    Em suas palavras, era seu "Contrato para Acabar com Todos os Contratos".
+                    Mas independentemente de como uma pessoa veja, a perda de sua habilidade divina em defender Liyue era um preço grande demais para se pagar.
+                    Até mesmo entre mortais, a base de um contrato é a troca equivalente.
+                    E para o Deus dos Contratos, que estabeleceu incontáveis contratos em sua vida, tal contrato deveria vir com benefícios.
+                    O Arconte Geo deu sua Gnosis como parte dele.
+                    O que a Arconte Cryo deu em troca para manter a balança igual?</p>
             </article>
        <article>
             <h3>Artefatos</h3>
@@ -94,7 +104,7 @@
             <img src="img/MeteoroInvertido.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
             <p>4 comjunto do Pedra Arcaica</p>
             <img src="img/PedraArcaica.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
-       </article>
+        </article>
        <article>
             <h3>Tipo lanceiro/melhores armas</h3>
             <p>Sua melhor arma é sua arma assinatura: Perfuradora Prismática</p>
@@ -133,7 +143,7 @@
                     <td><img src="img/Zhongli.png" title="É título da imagem" alt="Não carregou imagem..." width="80" ></td>
                     <td><img src="img/keqing.png" title="É título da imagem" alt="Não carregou imagem..." width="80" ></td>
                     <td><img src="img/Viajantes.png" title="É título da imagem" alt="Não carregou imagem..." width="80" ></td>
-                    </tr>
+                </tr>
                     <tr>
                     <td>2</td>
                     <td><img src="img/Xiao.png" title="É título da imagem" alt="Não carregou imagem..." width="80" ></td>
