--- a/pagina1.html
+++ b/pagina1.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Meu site favorito!</title>
+    <title>Alhaitham</title>
     <link rel="stylesheet" href="estilos.css"/>
 </head>
 <body>
     <header>
         <img src="img/Alhaitham.png" title="É título da imagem" alt="Não carregou imagem..." width="200" >
-        <h1>Página index.html</h1>
+        <h1>Alhaitham.html</h1>
         <h2>Elemento Geo</h2>
         <img src="img/Element_dendro.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
     </header>
@@ -71,6 +71,15 @@
                 Após sua avó falecer, Alhaitham cuidou de seu funeral, herdando suas propriedades e sua pequena biblioteca. Antes dela falecer, sua avó o deu uma justa bênção: "Você é um garoto esperto. Muitas pessoas como você possuem egos enormes e são propensos a agirem como querem. Você é excepcional, e possui um horizonte maior do que o de pessoas ordinárias. Isso não é ruim, mas você deve tomar cuidado para ter uma mente mais clara que os outros. Você deve entender que buscas vãs são como poeira, e que você deve discernir seu caminho com sabedoria."
                 Posteriormente, Alhaitham se inscreveu na Academia e foi imediatamente matriculado, obtendo altas pontuações no exame de ingresso dos Haravatat. O informaram que sua avó também o matriculou em outras aulas de outros Darshans. Seguindo o conselho de sua avó, Alhaitham sempre evitou chamar atenção e ter uma mente clara, sempre fazendo decisões para si mesmo.
                 Anos depois, quando Alhaitham se mudou para sua nova casa, levou todos esses livros. Ao organizá-los, ele revirou algumas páginas que havia lido há muito tempo. Os volumes que tinham desejos de boa sorte na contracapa eram de sua mãe, e os com referências entre páginas e notas nas margens eram de seu pai. Além disso, havia um livro grosso, com uma capa cor de esmeralda requintada. E na contracapa, sua avó havia escrito: Que meu garoto Alhaitham tenha uma vida pacífica.</p>
+                <h7 class="segundo">Visão</h7>
+                <p>"O valor de uma língua não está somente nas palavras. É através da consistência de um idioma que as pessoas podem controlar seus pensamentos. É por isso que ele é a base, as regras, a arma e a força. É com as diferenças da linguagem que poderemos utilizar outro caminho para alcançar a completa dialética do pensamento.
+                Para algumas pessoas, poderem controlar seus pensamentos é irrelevante, para outros, é algo de suma importância. São nossas buscas individuais que definem as diferenças de como controlaremos idiomas diferentes e utilizaremos meios diferentes, é por isso que em muitos momentos, as pessoas acabam controladas por uma linguagem."               
+                Alhaitham virou a folha que acabara de ler essas palavras impressas. Ao virar mais uma folha, chegou nas costas do livro. Ele sentiu que debaixo do livro havia um ornamento brilhante e refinado esse tempo todo.               
+                Ele naturalmente sabia o que era: a prova de seu poder, uma Visão. Mas para ele, isso não necessariamente significava tanto assim.            
+                Para um fiel, ser agraciado com um milagre era indescritível, mas para ele, isso era somente algo razoavelmente útil para ajudá-lo.             
+                Naquele instante em que recebeu sua Visão, Alhaitham partiu no caminho para realizar uma tarefa.
+                Ele não pretendia passar muito tempo investigando sua Visão, afinal, ela era dele, e poderia olhar quando quisesse.
+                Era como o aprendizado do conhecimento: uma vez em suas mãos, não fugiria.</p>
             </article>
        <article>
             <h3>Artefatos</h3>
@@ -84,7 +93,7 @@
        <article>
             <h3>Tipo espadachim/melhores armas</h3>
             <p>Sua melhor arma é sua arma assinatura: Luz das Folhas Cortadas</p>
-            <img src="img/Luz das Folhas Cortadas.png.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
+            <img src="img/Luz das Folhas Cortadas.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
             <p>As segundas melhores armas 5 estrelas: Cortadora de Neblina Reforjada, Haran Geppaku Futsu, Juramento de Liberdade, Cortadora de Jade Primordial</p>
             <img src="img/Cortadora da Neblina Reforjada.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
             <img src="img/Haran_Geppaku.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
@@ -96,7 +105,7 @@
             <img src="img/Espada_Negra.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
             <img src="img/espada putrida.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
             <p>Caso não tenha opção melhor podem ser usadas: prenuncio do alvorecer</p>
-            <img src="img/Prenúcio do Alvorecer.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
+            <img src="img/Prenucio do Alvorecer.png" title="É título da imagem" alt="Não carregou imagem..." width="80" >
             <h4>Times que podem ser formados para esse personagem</h4>     
             
             <style>
@@ -107,7 +116,7 @@
     background-attachment: fixed;
     background-blend-mode: multiply;
     background-size: cover;
-    background-color: #afee5c;
+    background-color: #befa70;
 }
                 
 
